Always use riscv64-* when building glibc
We had been only building riscv64-* while telling glibc to build using
riscv32-*.  The glibc build now respects this and falls back to the host
binutils, which don't work because they don't support RISC-V yet (on my
VM).  This just uses the riscv64-* tools that we build explicitly.

Signed-off-by: Palmer Dabbelt <palmer@rivosinc.com>

--- a/Makefile.in
+++ b/Makefile.in
@@ -354,7 +354,7 @@ endif
 		CXXFLAGS="$(CXXFLAGS_FOR_TARGET) -g -O2 $($@_CFLAGS)" \
 		ASFLAGS="$(ASFLAGS_FOR_TARGET) $($@_CFLAGS)" \
 		$</configure \
-		--host=$(call make_tuple,$($@_XLEN),linux-gnu) \
+		--host=riscv64-unknown-linux-gnu \
 		--prefix=/usr \
 		--disable-werror \
 		--enable-shared \
