--- a/.gitmodules
+++ b/.gitmodules
@@ -1,30 +1,30 @@
 [submodule "binutils"]
 	path = binutils
-	url = git://sourceware.org/git/binutils-gdb.git
+	url = https://sourceware.org/git/binutils-gdb.git
 	branch = master
 [submodule "gcc"]
 	path = gcc
-	url = git://gcc.gnu.org/git/gcc.git
+	url = https://gcc.gnu.org/git/gcc.git
 	branch = trunk
 [submodule "glibc"]
 	path = glibc
-	url = git://sourceware.org/git/glibc.git
+	url = https://sourceware.org/git/glibc.git
 [submodule "riscv-dejagnu"]
 	path = riscv-dejagnu
 	url = https://github.com/riscv-collab/riscv-dejagnu.git
 	branch = riscv-dejagnu-1.6
 [submodule "newlib"]
 	path = newlib
-	url = git://sourceware.org/git/newlib-cygwin.git
+	url = https://sourceware.org/git/newlib-cygwin.git
 	branch = master
 [submodule "gdb"]
 	path = gdb
-	url = git://sourceware.org/git/binutils-gdb.git
+	url = https://sourceware.org/git/binutils-gdb.git
 	branch = master
 [submodule "qemu"]
 	path = qemu
 	url = https://git.qemu.org/git/qemu.git
 [submodule "musl"]
 	path = musl
-	url = git://git.musl-libc.org/musl
+	url = https://git.musl-libc.org/git/musl
 	branch = master
